Deprecations cleanup